gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/test23536.d
version https://git-lfs.github.com/spec/v1
oid sha256:d6d24366a408b92ebb16c532da71dfb2b107de18f3dffbf2dfde9a8aee20ced3
size 737
